Simplify Website Monitoring Code & Fix #25

--- a/.env
+++ b/.env
@@ -32,6 +32,7 @@ EMAIL_FROM=
 SMTP_SERVER=
 WATCHER_URL=https://example.watcher.local
 WATCHER_LOGO=https://raw.githubusercontent.com/thalesgroup-cert/Watcher/master/Watcher/static/Watcher-logo-simple.png
+EMAIL_SUBJECT_TAG_SITE_MONITORING=INCIDENT
 EMAIL_CLASSIFICATION=INTERNAL
 
 # THE HIVE Setup
