--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,7 @@ services:
       SMTP_SERVER: ${SMTP_SERVER}
       WATCHER_URL: ${WATCHER_URL}
       WATCHER_LOGO: ${WATCHER_LOGO}
+      EMAIL_SUBJECT_TAG_SITE_MONITORING: ${EMAIL_SUBJECT_TAG_SITE_MONITORING}
       EMAIL_CLASSIFICATION: ${EMAIL_CLASSIFICATION}
       THE_HIVE_URL: ${THE_HIVE_URL}
       THE_HIVE_VERIFY_SSL: ${THE_HIVE_VERIFY_SSL}
